--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"lib": ["ES2015", "DOM"]
 	}
 }
